# Agent-Orchestrator

./: .gitignore  ARCHITECTURE.md  PLAN.md  RAG_SYSTEM.md  README.md  action.py  agent6.py  app.py  artifacts.py  assignment.txt  config.py  context.txt  decision.py  mcp_server.py.py  memory.py  perception.py  pyproject.toml  schemas.py
llm_gateway/: client.py  gateway_v3.db  main.py  providers.py  router.py
llm_gatewayV7/: gateway_v7.db
static/: index.html
