[project]
name = "agent-orchestrator"
version = "0.1.0"
description = "4-Role Cognitive Agent — EAG V3 Session 6"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "pydantic>=2.6",
    "jsonschema>=4.21",
    "mcp>=1.0",
    "google-auth>=2.0",
    "duckduckgo-search>=7.0",
    "crawl4ai>=0.4",
    "tavily-python>=0.5",
]

[project.scripts]
agent = "agent6:main"

[tool.uv]
dev-dependencies = []
